overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-controllers
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issuer: letsencrypt-prod
    nginx.org/rewrites: >-
      serviceName=controllers-swagger-svc-prod rewrite=/api;
      serviceName=controllers-products-svc-prod rewrite=/api;
      serviceName=controllers-cart-svc-prod rewrite=/api;
      serviceName=controllers-profile-svc-prod rewrite=/api;
      serviceName=controllers-reviews-svc-prod rewrite=/api;
      serviceName=controllers-orders-svc-prod rewrite=/api;
      serviceName=controllers-metadata-svc-prod rewrite=/api;
      serviceName=controllers-locations-svc-prod rewrite=/api;
      serviceName=controllers-notification-svc-prod rewrite=/api;
      serviceName=controllers-authorization-svc-prod rewrite=/api;
spec:
  tls:
    - hosts:
        - core.12stz.com
      secretName: core-12stz-com-tls
  rules:
    - host: admin.core.12stz.com
      http:
        paths:
          - path: /
            backend:
              serviceName: admin-dashboard-svc-prod
              servicePort: 80
    - host: core.12stz.com
      http:
        paths:
          - path: /swagger
            backend:
              serviceName: controllers-swagger-svc-prod
              servicePort: 80
          - path: /api/products
            backend:
              serviceName: controllers-products-svc-prod
              servicePort: 80
          - path: /api/cart
            backend:
              serviceName: controllers-cart-svc-prod
              servicePort: 80
          - path: /api/profile
            backend:
              serviceName: controllers-profile-svc-prod
              servicePort: 80
          - path: /api/reviews
            backend:
              serviceName: controllers-reviews-svc-prod
              servicePort: 80
          - path: /api/orders
            backend:
              serviceName: controllers-orders-svc-prod
              servicePort: 80
          - path: /api/metadata
            backend:
              serviceName: controllers-metadata-svc-prod
              servicePort: 80
          - path: /api/locations
            backend:
              serviceName: controllers-locations-svc-prod
              servicePort: 80
          - path: /api/notification
            backend:
              serviceName: controllers-notification-svc-prod
              servicePort: 80
          - path: /api/authorization
            backend:
              serviceName: controllers-authorization-svc-prod
              servicePort: 80
